# python_template

./: .gitignore  Makefile  README.md  bitbucket-pipelines.yml  pyproject.toml  requirements-bu.txt  requirements.txt
.github/workflows/: python-app.yml
doc/src/: index.html
doc/src/donut_package/: example.html  index.html  module2.html
doc/tests/: index.html  maintest.html
src/donut_package/: __init__.py  example.py  module2.py
tests/: testmain.py
