[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_package"
version = "0.0.1"
authors = [
  { name="Donut", email="industrialdonut@gmail.com" },
]
description = "A template example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Private",
    "Operating System :: Any",
]

[project.urls]
Homepage = "https://github.com/IndustrialDonut/python_template"
Issues = "https://github.com/IndustrialDonut/python_template/issues"